Added actor search

--- a/pydoc/app.forms.html
+++ b/pydoc/app.forms.html
@@ -61,9 +61,9 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>base_fields</strong> = OrderedDict([('username', &lt;django.forms.fields.C...o.forms.fields.CharField object at 0x03D8EFB0&gt;)])</dl>
+<dl><dt><strong>base_fields</strong> = OrderedDict([('username', &lt;django.forms.fields.C...o.forms.fields.CharField object at 0x042AFFF0&gt;)])</dl>
 
-<dl><dt><strong>declared_fields</strong> = OrderedDict([('username', &lt;django.forms.fields.C...o.forms.fields.CharField object at 0x03D8EFB0&gt;)])</dl>
+<dl><dt><strong>declared_fields</strong> = OrderedDict([('username', &lt;django.forms.fields.C...o.forms.fields.CharField object at 0x042AFFF0&gt;)])</dl>
 
 <hr>
 Methods inherited from <a href="django.contrib.auth.forms.html#AuthenticationForm">django.contrib.auth.forms.AuthenticationForm</a>:<br>
@@ -186,9 +186,9 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>base_fields</strong> = OrderedDict([('query', &lt;django.forms.fields.Char...o.forms.fields.CharField object at 0x03D8ECF0&gt;)])</dl>
+<dl><dt><strong>base_fields</strong> = OrderedDict([('query', &lt;django.forms.fields.Char...o.forms.fields.CharField object at 0x042AFC30&gt;)])</dl>
 
-<dl><dt><strong>declared_fields</strong> = OrderedDict([('query', &lt;django.forms.fields.Char...o.forms.fields.CharField object at 0x03D8ECF0&gt;)])</dl>
+<dl><dt><strong>declared_fields</strong> = OrderedDict([('query', &lt;django.forms.fields.Char...o.forms.fields.CharField object at 0x042AFC30&gt;)])</dl>
 
 <hr>
 Methods inherited from <a href="django.forms.forms.html#BaseForm">django.forms.forms.BaseForm</a>:<br>
