--- a/pydoc/app.tests.html
+++ b/pydoc/app.tests.html
@@ -55,6 +55,8 @@ All&nbsp;hardcoded&nbsp;counts&nbsp;calcualte&nbsp;based&nbsp;on&nbsp;test&nbsp;
 </dl>
 <hr>
 Methods defined here:<br>
+<dl><dt><a name="AutoCompleteTest-test_actor_autocompletion"><strong>test_actor_autocompletion</strong></a>(self)</dt><dd><tt>Tests&nbsp;autocompletion&nbsp;for&nbsp;actor.&nbsp;Check&nbsp;that&nbsp;we&nbsp;grab&nbsp;data&nbsp;from&nbsp;all&nbsp;three&nbsp;actors&nbsp;fields</tt></dd></dl>
+
 <dl><dt><a name="AutoCompleteTest-test_director_autocompletion"><strong>test_director_autocompletion</strong></a>(self)</dt><dd><tt>Tests&nbsp;autocompletion&nbsp;for&nbsp;director.</tt></dd></dl>
 
 <dl><dt><a name="AutoCompleteTest-test_distributor_autocompletion"><strong>test_distributor_autocompletion</strong></a>(self)</dt><dd><tt>Tests&nbsp;autocompletion&nbsp;for&nbsp;distributor.</tt></dd></dl>
@@ -529,8 +531,8 @@ Data and other attributes inherited from <a href="unittest.case.html#TestCase">u
     
 <tr bgcolor="#ffc8d8"><td rowspan=2><tt>&nbsp;&nbsp;&nbsp;</tt></td>
 <td colspan=2><tt>Tests&nbsp;for&nbsp;the&nbsp;search.&nbsp;<br>
-All&nbsp;magic&nbsp;numbers&nbsp;are&nbsp;calculated&nbsp;as&nbsp;N&nbsp;=&nbsp;(number&nbsp;of&nbsp;search&nbsp;result)&nbsp;*&nbsp;2&nbsp;+&nbsp;1.&nbsp;<br>
-As&nbsp;titles&nbsp;appear&nbsp;twice&nbsp;on&nbsp;marker&nbsp;and&nbsp;one&nbsp;comes&nbsp;from&nbsp;search&nbsp;form<br>&nbsp;</tt></td></tr>
+All&nbsp;magic&nbsp;numbers&nbsp;are&nbsp;calculated&nbsp;as&nbsp;N&nbsp;=&nbsp;(number&nbsp;of&nbsp;search&nbsp;result)&nbsp;*&nbsp;2&nbsp;(+&nbsp;1).&nbsp;+1&nbsp;only&nbsp;in&nbsp;search&nbsp;by&nbsp;title.&nbsp;<br>
+As&nbsp;titles&nbsp;appear&nbsp;twice&nbsp;on&nbsp;marker&nbsp;and&nbsp;one&nbsp;comes&nbsp;from&nbsp;search&nbsp;form,&nbsp;if&nbsp;we&nbsp;search&nbsp;by&nbsp;title<br>&nbsp;</tt></td></tr>
 <tr><td>&nbsp;</td>
 <td width="100%"><dl><dt>Method resolution order:</dt>
 <dd><a href="app.tests.html#SearchFormTest">SearchFormTest</a></dd>
@@ -542,6 +544,12 @@ As&nbsp;titles&nbsp;appear&nbsp;twice&nbsp;on&nbsp;marker&nbsp;and&nbsp;one&nbsp
 </dl>
 <hr>
 Methods defined here:<br>
+<dl><dt><a name="SearchFormTest-test_search_by_actor_1_and_2"><strong>test_search_by_actor_1_and_2</strong></a>(self)</dt><dd><tt>Tests&nbsp;search&nbsp;by&nbsp;actor&nbsp;specified&nbsp;in&nbsp;actor_3&nbsp;field.</tt></dd></dl>
+
+<dl><dt><a name="SearchFormTest-test_search_by_actor_2"><strong>test_search_by_actor_2</strong></a>(self)</dt><dd><tt>Tests&nbsp;search&nbsp;by&nbsp;actor&nbsp;specified&nbsp;in&nbsp;actor_3&nbsp;field.</tt></dd></dl>
+
+<dl><dt><a name="SearchFormTest-test_search_by_actor_3"><strong>test_search_by_actor_3</strong></a>(self)</dt><dd><tt>Tests&nbsp;search&nbsp;by&nbsp;actor&nbsp;specified&nbsp;in&nbsp;actor_3&nbsp;field.</tt></dd></dl>
+
 <dl><dt><a name="SearchFormTest-test_search_by_address"><strong>test_search_by_address</strong></a>(self)</dt><dd><tt>Tests&nbsp;search&nbsp;by&nbsp;title.</tt></dd></dl>
 
 <dl><dt><a name="SearchFormTest-test_search_by_address_without_distance"><strong>test_search_by_address_without_distance</strong></a>(self)</dt><dd><tt>Tests&nbsp;search&nbsp;by&nbsp;title.</tt></dd></dl>
@@ -558,7 +566,7 @@ Class methods defined here:<br>
 
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>EMPTY_SEARCH_QUERY</strong> = {'director': '', 'distance': '', 'distributor': '', 'production_company': '', 'query': '', 'title': '', 'writer': '', 'year': ''}</dl>
+<dl><dt><strong>EMPTY_SEARCH_QUERY</strong> = {'actor': '', 'director': '', 'distance': '', 'distributor': '', 'production_company': '', 'query': '', 'title': '', 'writer': '', 'year': ''}</dl>
 
 <hr>
 Methods inherited from <a href="django.test.testcases.html#TransactionTestCase">django.test.testcases.TransactionTestCase</a>:<br>
